Added test for GeoLocation, GameModel, Score #131